修改读取含油率的功能

--- a/src/main/resources/db-mysql.properties
+++ b/src/main/resources/db-mysql.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3366/data
-jdbc.user=root
-jdbc.password=123
+jdbc.url=jdbc:mysql://192.168.5.193:3306/data
+jdbc.user=myuser
+jdbc.password=root
