--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,9 +4,14 @@
 	xmlns="http://java.sun.com/xml/ns/javaee"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	id="jt-manage" version="2.5">
-  <context-param>
+  	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:spring/applicationContext*.xml</param-value>
+	</context-param>
+	
+	<context-param>
+		<param-name>spring.profiles.default</param-name>
+		<param-value>development</param-value>
 	</context-param>
 	
 	<!--Spring的ApplicationContext 载入 -->
@@ -38,6 +43,10 @@
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
 			<param-value>classpath:spring/springmvc-config.xml</param-value>
+			
+			<!-- 为servlet设置默认的profile -->
+			<param-name>spring.profiles.default</param-name>
+			<param-value>development</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
