修改web.xml中多个初始化参数设置问题

--- a/src/main/resources/mysql-development.properties
+++ b/src/main/resources/mysql-development.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/data
+jdbc.url=jdbc:mysql://localhost:3366/data
 jdbc.user=root
-jdbc.password=root
+jdbc.password=123
