--- a/src/main/resources/mysql-production.properties
+++ b/src/main/resources/mysql-production.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://192.168.5.193:3306/data
-jdbc.user=kobe
+jdbc.user=myuser
 jdbc.password=root
